@@ -1,3 +1,8 @@
+2020-02-19  Aaron Merey  <amerey@redhat.com>
+
+	* run-debuginfod-find.sh: Run tests for	verifying default
+	client cache locations.
+
 2020-02-26  Konrad Kleine <kkleine@redhat.com>
 
 	* run-debuginfod-find.sh: added tests for DEBUGINFOD_URLS beginning
